Update README and fix style

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -7,8 +7,6 @@
     <title>Food, LLC</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'> -->
 
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
@@ -34,7 +32,7 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
-              <a href="menu-categories.html">
+              <a href="#">
                 <br class="hidden-xs"> Chicken</a>
             </li>
             <li>
@@ -58,6 +56,7 @@
 
       <div class="col-xs-12">
         <div class="text-wrap">
+        <p class="section-header">Chicken</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Atqui si, ut convenire debet inter nos, est quaedam appetitio naturalis ea, quae secundum naturam sunt, appetens, eorum omnium est aliquae summa facienda. Similiter sensus, cum accessit ad naturam, tuetur illam quidem, sed etiam se tuetur; Sunt enim quasi prima elementa naturae, quibus ubertas orationis adhiberi vix potest, nec equidem eam cogito consectari. Duo Reges: constructio interrete. Itaque primos congressus copulationesque et consuetudinum instituendarum voluntates fieri propter voluptatem; Cuius etiam illi hortuli propinqui non memoriam solum mihi afferunt, sed ipsum videntur in conspectu meo ponere. Est autem etiam actio quaedam corporis, quae motus et status naturae congruentis tenet; </p>
 
         <p>Nisi mihi Phaedrum, inquam, tu mentitum aut Zenonem putas, quorum utrumque audivi, cum mihi nihil sane praeter sedulitatem probarent, omnes mihi Epicuri sententiae satis notae sunt. Istic sum, inquit. Si est nihil nisi corpus, summa erunt illa: valitudo, vacuitas doloris, pulchritudo, cetera. Sic enim maiores nostri labores non fugiendos tristissimo tamen verbo aerumnas etiam in deo nominaverunt. Illud quaero, quid ei, qui in voluptate summum bonum ponat, consentaneum sit dicere. Huic mori optimum esse propter desperationem sapientiae, illi propter spem vivere. Aut, si esses Orestes, Pyladem refelleres, te indicares et, si id non probares, quo minus ambo una necaremini non precarere? Quis, quaeso, illum negat et bonum virum et comem et humanum fuisse? Inquit, an parum disserui non verbis Stoicos a Peripateticis, sed universa re et tota sententia dissidere? Octavio fuit, cum illam severitatem in eo filio adhibuit, quem in adoptionem D. </p>
